added true vsm and removed auto tags(tokens) from being sent to the front-end...and other misc. things that i forgot