@@ -9,7 +9,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class NoteService {
@@ -19,8 +18,8 @@ public class NoteService {
     private final TfidfService tfidfService;
 
     public NoteService(NoteRepository repo,
-            TextProcessingService textProcessing,
-            TfidfService tfidfService) {
+                       TextProcessingService textProcessing,
+                       TfidfService tfidfService) {
         this.repo = repo;
         this.textProcessing = textProcessing;
         this.tfidfService = tfidfService;
@@ -30,25 +29,27 @@ public class NoteService {
         Note note = new Note();
         note.setTitle(dto.getTitle());
         note.setContent(dto.getContent());
+        note.setCreatedDate(LocalDateTime.now());
         note.setLastModifiedDate(LocalDateTime.now());
 
-        // preprocess tokens
-        // preprocess tokens
-        note.setTokens(new HashSet<>(textProcessing.preprocess(dto.getContent())));
-        tfidfService.printTfidf(note);
+        Set<String> titleTokens = new HashSet<>(textProcessing.preprocess(dto.getTitle(), ""));
+        Set<String> contentTokens = new HashSet<>(textProcessing.preprocess("", dto.getContent()));
+        Set<String> allTokens = new HashSet<>(titleTokens);
+        allTokens.addAll(contentTokens);
 
-        // 1️⃣ Save user tags first (persist to note_user_tags table)
+        note.setTitleTokens(titleTokens);
+        note.setContentTokens(contentTokens);
+        note.setTokens(allTokens);
+
         Set<String> userTags = dto.getUserTags() != null
                 ? dto.getUserTags().stream().map(String::toLowerCase).collect(Collectors.toSet())
                 : new HashSet<>();
         note.setUserTags(userTags);
 
-        // 2️⃣ Generate auto tags
-        List<String> autoTags = tfidfService.generateTagsForNoteContent(dto.getContent(), 6);
+        List<String> autoTags = tfidfService.generateTagsForNoteContent(dto.getTitle(), dto.getContent(), 6);
 
-        // 3️⃣ Merge user tags with auto tags for the "all tags" set
-        List<String> merged = tfidfService.mergeUserTags(autoTags, new ArrayList<>(userTags));
-        note.setTags(new HashSet<>(merged));
+        List<String> mergedTags = tfidfService.mergeUserTags(autoTags, new ArrayList<>(userTags));
+        note.setTags(new HashSet<>(mergedTags));
 
         return repo.save(note);
     }
@@ -60,28 +61,29 @@ public class NoteService {
         note.setContent(dto.getContent());
         note.setLastModifiedDate(LocalDateTime.now());
 
-        // preprocess tokens
-        note.setTokens(new HashSet<>(textProcessing.preprocess(dto.getContent())));
+        Set<String> titleTokens = new HashSet<>(textProcessing.preprocess(dto.getTitle(), ""));
+        Set<String> contentTokens = new HashSet<>(textProcessing.preprocess("", dto.getContent()));
+        Set<String> allTokens = new HashSet<>(titleTokens);
+        allTokens.addAll(contentTokens);
 
-        // generate tags
-        List<String> autoTags = tfidfService.generateTagsForNoteContent(dto.getContent(), 6);
+        note.setTitleTokens(titleTokens);
+        note.setContentTokens(contentTokens);
+        note.setTokens(allTokens);
 
-        // save user tags separately first
-        Set<String> userTagsSet = dto.getUserTags() != null
-                ? new HashSet<>(dto.getUserTags().stream().map(String::toLowerCase).toList())
+        Set<String> userTags = dto.getUserTags() != null
+                ? dto.getUserTags().stream().map(String::toLowerCase).collect(Collectors.toSet())
                 : new HashSet<>();
-        note.setUserTags(userTagsSet);
+        note.setUserTags(userTags);
 
-        // merge auto tags with user tags to form final tags
-        List<String> merged = tfidfService.mergeUserTags(autoTags, new ArrayList<>(userTagsSet));
-        note.setTags(new HashSet<>(merged));
+        List<String> autoTags = tfidfService.generateTagsForNoteContent(dto.getTitle(), dto.getContent(), 6);
+        List<String> mergedTags = tfidfService.mergeUserTags(autoTags, new ArrayList<>(userTags));
+        note.setTags(new HashSet<>(mergedTags));
 
         return repo.save(note);
     }
 
     public void delete(Long id) {
-        if (!repo.existsById(id))
-            throw new NoSuchElementException();
+        if (!repo.existsById(id)) throw new NoSuchElementException();
         repo.deleteById(id);
     }
 
@@ -89,49 +91,51 @@ public class NoteService {
         return repo.findAll();
     }
 
-    // ---------------- Updated Search Method ----------------
     public List<NoteResponse> search(String q, String tag) {
         List<Note> notes = repo.findAll();
 
-        // Preprocess query tokens for TF-IDF
-        Set<String> queryTokens = (q != null && !q.isEmpty())
-                ? new HashSet<>(textProcessing.preprocess(q))
-                : Collections.emptySet();
+        if ((q == null || q.isEmpty()) && (tag == null || tag.isEmpty())) {
+            return notes.stream().map(this::toDtoPublic).toList();
+        }
 
-        // Compute IDF map for corpus
+        List<String> queryTokens = (q != null && !q.isEmpty())
+                ? textProcessing.preprocess("", q)
+                : Collections.emptyList();
+
+        // IDF right here
         Map<String, Integer> df = tfidfService.computeDfAll();
-        int N = (int) repo.count();
-        Map<String, Double> idf = tfidfService.computeIdf(df, Math.max(N, 1));
+        int N = Math.max((int) repo.count(), 1);
+        Map<String, Double> idf = tfidfService.computeIdf(df, N);
 
-        // Filter notes by token overlap or tag if provided
-        notes = notes.stream().filter(n -> {
-            boolean matchesQuery = queryTokens.isEmpty()
-                    || (n.getTokens() != null && !Collections.disjoint(n.getTokens(), queryTokens));
-            boolean matchesTag = tag == null || tag.isEmpty()
-                    || (n.getTags() != null && n.getTags().stream().anyMatch(t -> t.contains(tag)))
-                    || (n.getUserTags() != null && n.getUserTags().stream().anyMatch(t -> t.contains(tag)));
-            return matchesQuery && matchesTag;
-        }).toList();
+        Map<String, Double> queryVector =
+                tfidfService.buildTfidfVector(queryTokens, idf);
 
-        // Compute relevance score for each note
-        List<NoteResult> scoredNotes = notes.stream()
-                .map(n -> {
-                    double score = tfidfService.computeRelevanceScore(
-                            new ArrayList<>(n.getTokens()),
-                            new ArrayList<>(queryTokens),
-                            idf);
-                    System.out.println(n.getTitle() + " : right here por favor " + score); // debug
-                    return new NoteResult(n, score);
+        List<NoteResult> ranked = notes.stream()
+                .map(note -> {
+
+                    if (tag != null && !tag.isEmpty()) {
+                        boolean match =
+                                (note.getTags() != null && note.getTags().contains(tag)) ||
+                                (note.getUserTags() != null && note.getUserTags().contains(tag));
+                        if (!match) return null;
+                    }
+
+                    Map<String, Double> docVector =
+                            tfidfService.buildWeightedDocumentVector(note, idf);
+
+                    double score =
+                            tfidfService.cosineSimilarity(docVector, queryVector);
+
+                    return score > 0 ? new NoteResult(note, score) : null;
                 })
+                .filter(Objects::nonNull)
                 .sorted((a, b) -> Double.compare(b.score, a.score))
                 .toList();
 
-        // Convert to DTO
-        return scoredNotes.stream()
-                .map(r -> toDto(r.note))
-                .collect(Collectors.toList());
+        return ranked.stream()
+                .map(r -> toDtoPublic(r.note))
+                .toList();
     }
-
     private static class NoteResult {
         public Note note;
         public double score;
@@ -142,26 +146,20 @@ public class NoteService {
         }
     }
 
-    public NoteResponse toDto(Note note) {
+    private NoteResponse toDto(Note note) {
         NoteResponse dto = new NoteResponse();
         dto.setId(note.getId());
         dto.setTitle(note.getTitle());
         dto.setContent(note.getContent());
         dto.setLastUpdatedAt(note.getLastModifiedDate());
 
-        dto.setTokens(note.getTokens() != null ? new ArrayList<>(note.getTokens()) : new ArrayList<>());
-
-        // Merge all tags for response
-        dto.setAllTags(
-                Stream.concat(
-                        note.getTags() != null ? note.getTags().stream() : Stream.empty(),
-                        note.getUserTags() != null ? note.getUserTags().stream() : Stream.empty())
-                        .collect(Collectors.toList()));
-
-        // separate lists
-        dto.setTags(note.getTags() != null ? new ArrayList<>(note.getTags()) : new ArrayList<>());
         dto.setUserTags(note.getUserTags() != null ? new ArrayList<>(note.getUserTags()) : new ArrayList<>());
 
+        dto.setTags(new ArrayList<>());
         return dto;
+    }
+
+    public NoteResponse toDtoPublic(Note note) {
+        return toDto(note);
     }
 }
